crates/pg_syntax/tests/snapshots/postgres_regress/pg_lsn@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '0/16AE7F7'::pg_lsn + 16::numeric;"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    AExpr@7..40
      TypeCast@7..26
        AConst@7..18
          Sconst@7..18 "'0/16AE7F7'"
        Typecast@18..20 "::"
        TypeName@20..26
          Ident@20..26 "pg_lsn"
      Whitespace@26..27 " "
      Ascii43@27..28 "+"
      Whitespace@28..29 " "
      TypeCast@29..40
        AConst@29..31
          Iconst@29..31 "16"
        Typecast@31..33 "::"
        TypeName@33..40
          Numeric@33..40 "numeric"
  Ascii59@40..41 ";"

