crates/pg_syntax/tests/snapshots/postgres_regress/pg_lsn@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '0/1'::pg_lsn - 2::numeric;"
---
SelectStmt@0..34
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    AExpr@7..33
      TypeCast@7..20
        AConst@7..12
          Sconst@7..12 "'0/1'"
        Typecast@12..14 "::"
        TypeName@14..20
          Ident@14..20 "pg_lsn"
      Whitespace@20..21 " "
      Ascii45@21..22 "-"
      Whitespace@22..23 " "
      TypeCast@23..33
        AConst@23..24
          Iconst@23..24 "2"
        Typecast@24..26 "::"
        TypeName@26..33
          Numeric@26..33 "numeric"
  Ascii59@33..34 ";"

